# slygen

./: Cargo.toml  LICENSE  README.md  generate_api.sh
res/: Cargo.toml.hbs
src/: lib.rs  main.rs  shell.rs
src/terminal/: logger.rs  mod.rs  question.rs  shell.rs
