[package]
name = "slygen"
description = "CLI generator for OpenAPI documents"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"
readme = "README.md"
authors = [
    "Adam Schlesinger <adam@badplanning.dev>"
]

[[bin]]
name = "slygen"
path = "src/main.rs"

[lib]
name = "slygen"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
enum_dispatch = "0.3.13"
handlebars = "5.1.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.105"
prettyplease = "0.2.20"
proc-macro2 = "1.0.83"
syn = { version = "2.0.65", features = ["full"]}
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
log4rs = "1.3.0"
convert_case = "0.6.0"
quote = "1.0.36"
reqwest = "0.12.4"


